# flagpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: flagplusplus-config.cmake.in
examples/: CMakeLists.txt  basic_usage.cpp  thread_safety.cpp
include/: flagpp.hpp
tests/: CMakeLists.txt  test_flagpp.cpp
